--- a/app/src/main/res/layout/fragment_day_list.xml
+++ b/app/src/main/res/layout/fragment_day_list.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <github.chenupt.calendar.view.AutoLoadListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
