--- a/app/src/main/res/layout/view_item_month.xml
+++ b/app/src/main/res/layout/view_item_month.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:id="@+id/image_view"
@@ -8,4 +8,13 @@
         android:src="@drawable/test"
         android:layout_width="match_parent"
         android:layout_height="200dp" />
-</LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/month_text_view"
+        android:padding="20dp"
+        />
+
+</RelativeLayout>
