--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
 
         <FrameLayout
             android:id="@+id/content"
+            android:layout_below="@+id/tool_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
