--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
-        android:background="@color/common_text"
+        android:background="@color/common"
         android:fitsSystemWindows="true">
 
         <!-- Your drawer content -->
