--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="common_text">#009587</color>
+    <color name="common">#009587</color>
     <color name="primary_dark">#388e3c</color>
 </resources>
