--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -11,7 +11,8 @@
     <TextView
         android:id="@+id/info_text"
         android:textSize="16sp"
-        android:padding="10dp"
+        android:gravity="center"
+        android:layout_margin="10dp"
         android:text="2014 / 12 / 24"
         android:textColor="@color/common"
         android:layout_width="match_parent"
@@ -19,14 +20,14 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@color/common"/>
     <EditText
         android:id="@+id/content_edit"
         android:textSize="16sp"
         android:gravity="top"
-        android:padding="10dp"
+        android:layout_margin="10dp"
         android:hint="今日的世界"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
