--- a/app/src/main/res/layout/activity_new_note.xml
+++ b/app/src/main/res/layout/activity_new_note.xml
@@ -9,6 +9,7 @@
         android:background="@color/common"
         android:minHeight="?attr/actionBarSize" />
     <TextView
+        android:visibility="gone"
         android:id="@+id/info_text"
         android:textSize="16sp"
         android:gravity="center"
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <View
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="10dp"
