--- a/app/src/main/res/layout/view_item_month.xml
+++ b/app/src/main/res/layout/view_item_month.xml
@@ -2,12 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
+    <!--<ImageView-->
+        <!--android:id="@+id/image_view"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--android:src="@drawable/test"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="200dp" />-->
+    <com.fmsirvent.ParallaxEverywhere.PEWImageView
+        xmlns:pew="http://schemas.android.com/apk/res-auto"
         android:id="@+id/image_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         android:scaleType="centerCrop"
         android:src="@drawable/test"
-        android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        pew:reverse="reverseY"
+        />
 
     <TextView
         android:layout_width="wrap_content"
