--- a/app/src/main/res/layout/fragment_day_list.xml
+++ b/app/src/main/res/layout/fragment_day_list.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<github.chenupt.dragtoplayout.DragTopLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drag_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <github.chenupt.calendar.view.AutoLoadListView
-        android:id="@+id/list_view"
-        android:dividerHeight="0.5dp"
+    <!--menu view-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+        <ImageView
+            android:src="@drawable/ic_launcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <!--content view-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <github.chenupt.calendar.view.AutoLoadListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="0.5dp" />
+    </LinearLayout>
+
+</github.chenupt.dragtoplayout.DragTopLayout>
