--- a/app/src/main/res/layout/fragment_day_list.xml
+++ b/app/src/main/res/layout/fragment_day_list.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--menu view-->
+    <!--top view-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:background="@color/colorPrimaryLight"
         android:orientation="vertical">
         <ImageView
+            android:layout_margin="20dp"
             android:src="@drawable/ic_launcher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
